# clinical-scope

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DISCLAIMER.txt  LICENSE  README.md  pyproject.toml  ruff.toml
.claude/skills/anonymize-timeseries/: SKILL.md
.claude/skills/generate-database-options/: SKILL.md
.claude/skills/new-datasource/: SKILL.md
.claude/skills/organize-patient-folder/: SKILL.md
.github/workflows/: build.yml  ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: RELEASING.md
docs/adr/: 0001-diagnose-dont-resolve-patient-folders.md  0002-warn-only-on-unresolved-license-attribution.md  0003-output-root-redirection.md
docs/user_guide/: build_pdf.sh  tutorial.md
example/demo_database/: database_options.xlsx
example/option_files/: example_database_options.json  example_database_options.xlsx  example_database_options_from_xlsx.json  example_database_options_other.json  example_database_options_other.xlsx  example_database_options_other_from_xlsx.json  patient_options_example.json  template_database_options.json
scripts/: database_statistics.py  inspect_patient_data.py  process_patient_data.py  script_visualization_patient_multiple_data_sources.py  visualization_patient_data.py
src/clinical_data_visualizer/: __init__.py  constants.py  data_management.py  database_options_parser.py  database_options_xlsx.py  database_statistics.py  datasource_base.py  datasource_list.py  helper.py  hover_formatters.py  inspection.py  logger_config.py  signal_container.py  utilities.py  wrapper.py
src/clinical_data_visualizer/build_info/: README.md  build.sh  core_api.spec
src/clinical_data_visualizer/config/: parsing.py
src/clinical_data_visualizer/dash_api/: core_api.py  datetime_utils.py  helper_api.py  shape_manager.py  styles.py  ui_components.py  validation.py
src/clinical_data_visualizer/datasource/: __init__.py  base.py  inspection.py  registry.py  timing.py
src/clinical_data_visualizer/eit/: eit_split.py  eit_to_asc.py  find_load_format.py  options.py
src/clinical_data_visualizer/fluxmed_parameters/: find_load_format.py  options.py
src/clinical_data_visualizer/fluxmed_signals/: find_load_format.py  options.py
src/clinical_data_visualizer/io/: __init__.py  file_utils.py  timezone.py
src/clinical_data_visualizer/mindray/: find_load_format.py  options.py
src/clinical_data_visualizer/mindray_respi_numerics/: find_load_format.py  options.py
src/clinical_data_visualizer/mindray_respi_waves/: __init__.py  find_load_format.py  options.py
src/clinical_data_visualizer/mindray_scope/: find_load_format.py  options.py
src/clinical_data_visualizer/other/: find_load_format.py  options.py
src/clinical_data_visualizer/philips_numerics/: find_load_format.py  options.py
src/clinical_data_visualizer/philips_waves/: find_load_format.py  options.py
src/clinical_data_visualizer/servo_u/: find_load_format.py  options.py
src/clinical_data_visualizer/syringe/: find_load_format.py  options.py
src/clinical_scope/: __init__.py  constants.py  database_options_parser.py  database_options_xlsx.py  signal_container.py  wrapper.py
src/clinical_scope/build_info/: README.md  assemble_bundle.py  build.sh  core_api.spec  generate_third_party_licenses.py
src/clinical_scope/config/: __init__.py  parsing.py
src/clinical_scope/dash_api/: core_api.py  helper_api.py  io.py  styles.py  ui_components.py  validation.py
src/clinical_scope/datasource/: __init__.py  base.py  inspection.py  registry.py
src/clinical_scope/io/: __init__.py  file_utils.py  paths.py
tests/: README.md  conftest.py
tests/dash/: conftest.py  test_callbacks_data.py  test_callbacks_inspect.py
tests/datasource/: conftest.py  test_eit.py  test_fluxmed_parameters.py  test_fluxmed_signals.py  test_icca.py  test_mindray_respi_numerics.py  test_mindray_respi_waves.py  test_mindray_scope.py  test_other.py  test_philips_numerics.py  test_philips_waves.py  test_servo_u.py  test_syringe.py
tests/expected_results/eit/: formatted.parquet  loaded.parquet
tests/integration/: test_batch_inspect.py  test_display.py  test_extract.py  test_inspect.py  test_main_visualization.py  test_output_root.py
tests/unit/: test_data_processor.py  test_database_options_parser.py  test_database_options_xlsx.py  test_database_statistics.py  test_datasource_base_cache.py  test_find_files.py  test_inspection.py  test_junk_files.py  test_load_annotations.py  test_paths.py  test_patient_options_io.py  test_signal_container.py  test_third_party_licenses.py  test_timezone.py  test_utilities.py
(+315 files in other folders)
