[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-scope"
version = "0.2.4"
description = "Interactive visualization dashboard for clinical physiological signals"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Alexis Janin", email = "alexis.janin@inria.fr"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "dash",
  "dash_bootstrap_components",
  "dash_daq",
  "pandas",
  "numpy",
  "plotly>=5.24",
  "plotly-resampler",
  "pyarrow",
  "openpyxl",
  "defusedxml",
  "pytz",
]

[project.scripts]
clinical-scope = "clinical_scope.dash_api.core_api:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
# Default coverage target for clinical_scope package
# Usage: pytest --cov=clinical_scope --cov-report=term-missing
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "snapshot: golden-file content regression tests (deselect with '-m \"not snapshot\"')",
]

[project.urls]
Homepage = "https://github.com/larib-data/clinical-scope"
Repository = "https://github.com/larib-data/clinical-scope.git"
